Replace deprecated `Locale` and `URL` ctors